create phone-number.js and country codes list

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -166,26 +166,37 @@
                 <section class="flex flex-col gap-4 w-[527px] max-sm:w-full rounded-2xl p-8 border border-border shadow-md">
                     <header class="text-center">
                         <h1 class="font-semibold text-black text-[32px]">نسيت كلمة المرور</h1>
-                        <p class="text-secondary-foreground">من فضلك، أدخل رقم الجوال المرتبط بحسابك </p>
+                        <p class="text-secondary-foreground mt-2">من فضلك، أدخل رقم الجوال المرتبط بحسابك </p>
                     </header>
 
-                    <form action="/forgot-password" method="POST" class="form" id="login-form"></form>
+                    <form action="/forgot-password" method="POST" class="form" id="login-form">
                         <!-- phone -->
                         <div class="form-control" id="phone-control">
                             <label for="phone" class="font-medium text-black required">رقم الجوال</label>
-                            <section class="form-control-group">
-                                <input 
-                                    type="tel" 
-                                    name="phone" 
-                                    id="phone" 
-                                    placeholder="أدخل رقم الجوال" 
-                                    required
-                                    class="placeholder:text-right border-l border-border"
-                                    maxlength="9"
-                                    inputmode="numeric"
+                            <div class="flex items-center" dir="ltr">
+                                <button 
+                                    id="dropdown-phone-button" 
+                                    data-dropdown-toggle="dropdown-phone" 
+                                    class="
+                                        z-10 inline-flex items-center justify-center min-w-20 h-10 px-2 items-center text-sm text-center 
+                                        bg-gray-100 border border-border rounded-s-lg hover:bg-gray-200 focus:outline-none focus:ring-main
+                                        dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 
+                                        dark:text-white dark:border-gray-600
+                                    " 
+                                    type="button"
+                                    tabindex="-1"
+                                    data-dropdown-placement="bottom-start"
                                 >
-                                <span class="text-forground w-fit"><bdi>+966</bdi></span>
-                            </section>
+                                    <span id="dropdown-phone-button-value">+966</span>
+                                    <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
+                                </button>
+                                <div id="dropdown-phone" class="z-10 hidden h-64 overflow-y-auto scrollbar-thin bg-white divide-y divide-gray-100 rounded-lg shadow-sm border border-border w-52 dark:bg-gray-700">
+                                    <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdown-phone-button"></ul>
+                                </div>
+                                <div class="relative w-full">
+                                    <input type="text" id="phone" class="input-field w-full rounded-l-[0]!" inputmode="numeric" placeholder="5010203040" required />
+                                </div>
+                            </div>
                         </div>
 
                         <!-- email -->
@@ -204,7 +215,7 @@
 
                         <div>
                             <button 
-                                type="button" 
+                                type="submit" 
                                 class="
                                     btn bg-main text-white hover:bg-main/80
                                     disabled:bg-main/20 disabled:text-main/60 
@@ -236,6 +247,8 @@
             </section>
         </main>
 
+        <script src="./public/js/lib/flowbit.min.js"></script>
+        <script type="module" src="./public/js/utils/phone-number.js"></script>
         <script type="module" src="./public/js/auth/forgot-password.js"></script>
     </body>
 </html>
