--- a/validate-otp.html
+++ b/validate-otp.html
@@ -169,7 +169,7 @@
                 <section class="flex flex-col gap-4 w-[527px] max-sm:w-full rounded-2xl p-8 border border-border shadow-md">
                     <header class="text-center">
                         <h1 class="font-semibold text-black text-[32px]">تأكيد رمز التحقق</h1>
-                        <p class="text-secondary-foreground">
+                        <p class="text-secondary-foreground mt-2">
                             يرجى إدخال رمز التحقق المرسل إلى بريدك الإلكتروني
                             khlxxxx@gmail.com
                             لاستكمال عملية استعادة الحساب
