--- a/create-company-account.html
+++ b/create-company-account.html
@@ -205,7 +205,7 @@
                                 >
                                 <p class="form-field-hint">
                                     <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M8 1.33325C4.318 1.33325 1.33333 4.31892 1.33333 8.00025C1.33333 11.6816 4.318 14.6669 8 14.6669C11.6823 14.6669 14.6667 11.6816 14.6667 8.00025C14.6667 4.31892 11.6823 1.33325 8 1.33325ZM8 13.3333C5.05467 13.3333 2.66667 10.9453 2.66667 8.00025C2.66667 5.05592 5.05467 2.66792 8 2.66792C10.9453 2.66792 13.3333 5.05592 13.3333 8.00025C13.3333 10.9453 10.9453 13.3333 8 13.3333ZM7.33333 6.66659H8C8.36867 6.66659 8.66667 6.96459 8.66667 7.33325V10C8.66667 10.3687 8.36867 10.6666 8 10.6666H7.33333C6.96467 10.6666 6.66667 10.3687 6.66667 10V7.33325C6.66667 6.96459 6.96467 6.66659 7.33333 6.66659ZM8 5C7.63133 5 7.33333 5.298 C7.33333 5.66666C7.33333 6.03533C7.63133 6.33333C8 6.33333C8.36867 6.33333C8.66667 6 C8.66667 5.66666C8.66667 5.298 8.36867 5 8 5Z" fill="currentColor"/>
+                                        <path d="M8 2C6.71442 2 5.45772 2.38122 4.3888 3.09545C3.31988 3.80968 2.48676 4.82484 1.99479 6.01256C1.50282 7.20028 1.37409 8.50721 1.6249 9.76809C1.8757 11.029 2.49477 12.1872 3.40381 13.0962C4.31285 14.0052 5.47104 14.6243 6.73192 14.8751C7.99279 15.1259 9.29973 14.9972 10.4874 14.5052C11.6752 14.0132 12.6903 13.1801 13.4046 12.1112C14.1188 11.0423 14.5 9.78558 14.5 8.5C14.4982 6.77665 13.8128 5.12441 12.5942 3.90582C11.3756 2.68722 9.72335 2.00182 8 2ZM8 14C6.91221 14 5.84884 13.6774 4.94437 13.0731C4.0399 12.4687 3.33495 11.6098 2.91867 10.6048C2.50238 9.59977 2.39347 8.4939 2.60568 7.427C2.8179 6.36011 3.34173 5.3801 4.11092 4.61091C4.8801 3.84172 5.86011 3.3179 6.92701 3.10568C7.9939 2.89346 9.09977 3.00238 10.1048 3.41866C11.1098 3.83494 11.9687 4.53989 12.5731 5.44436C13.1774 6.34883 13.5 7.4122 13.5 8.5C13.4983 9.95818 12.9184 11.3562 11.8873 12.3873C10.8562 13.4184 9.45819 13.9983 8 14ZM9 11.5C9 11.6326 8.94732 11.7598 8.85356 11.8536C8.75979 11.9473 8.63261 12 8.5 12C8.23479 12 7.98043 11.8946 7.7929 11.7071C7.60536 11.5196 7.5 11.2652 7.5 11V8.5C7.36739 8.5 7.24022 8.44732 7.14645 8.35355C7.05268 8.25979 7 8.13261 7 8C7 7.86739 7.05268 7.74021 7.14645 7.64645C7.24022 7.55268 7.36739 7.5 7.5 7.5C7.76522 7.5 8.01957 7.60536 8.20711 7.79289C8.39465 7.98043 8.5 8.23478 8.5 8.5V11C8.63261 11 8.75979 11.0527 8.85356 11.1464C8.94732 11.2402 9 11.3674 9 11.5ZM7 5.75C7 5.60166 7.04399 5.45666 7.1264 5.33332C7.20881 5.20999 7.32595 5.11386 7.46299 5.05709C7.60003 5.00032 7.75083 4.98547 7.89632 5.01441C8.04181 5.04335 8.17544 5.11478 8.28033 5.21967C8.38522 5.32456 8.45665 5.4582 8.48559 5.60368C8.51453 5.74917 8.49968 5.89997 8.44291 6.03701C8.38615 6.17406 8.29002 6.29119 8.16668 6.3736C8.04334 6.45601 7.89834 6.5 7.75 6.5C7.55109 6.5 7.36032 6.42098 7.21967 6.28033C7.07902 6.13968 7 5.94891 7 5.75Z" fill="currentColor"/>
                                     </svg>
                                     يجب أن يكون البريد الإلكتروني الخاصُ بك صالحًا
                                 </p>
@@ -241,56 +241,14 @@
                                         tabindex="-1"
                                         data-dropdown-placement="bottom-start"
                                     >
-                                        +1 <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
+                                        <span id="dropdown-phone-button-value">+966</span>
+                                        <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
                                     </button>
-                                    <div id="dropdown-phone" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow-sm border border-border w-52 dark:bg-gray-700">
-                                        <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdown-phone-button">
-                                            <li>
-                                                <button type="button" class="inline-flex w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">
-                                                    <span class="inline-flex items-center">
-                                                        United States (+1)
-                                                    </span>
-                                                </button>
-                                            </li>
-                                            <li>
-                                                <button type="button" class="inline-flex w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">
-                                                    <span class="inline-flex items-center">
-                                                        United Kingdom (+44)
-                                                    </span>
-                                                </button>
-                                            </li>
-                                            <li>
-                                                <button type="button" class="inline-flex w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">
-                                                    <span class="inline-flex items-center">
-                                                        Australia (+61)
-                                                    </span>
-                                                </button>
-                                            </li>
-                                            <li>
-                                                <button type="button" class="inline-flex w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">
-                                                    <span class="inline-flex items-center">
-                                                        Germany (+49)
-                                                    </span>
-                                                </button>
-                                            </li>
-                                            <li>
-                                                <button type="button" class="inline-flex w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">
-                                                    <span class="inline-flex items-center">
-                                                        France (+33)
-                                                    </span>
-                                                </button>
-                                            </li>
-                                            <li>
-                                                <button type="button" class="inline-flex w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">
-                                                    <span class="inline-flex items-center">
-                                                        Germany (+49)
-                                                    </span>
-                                                </button>
-                                            </li>
-                                        </ul>
+                                    <div id="dropdown-phone" class="z-10 hidden h-64 overflow-y-auto scrollbar-thin bg-white divide-y divide-gray-100 rounded-lg shadow-sm border border-border w-52 dark:bg-gray-700">
+                                        <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdown-phone-button"></ul>
                                     </div>
                                     <div class="relative w-full">
-                                        <input type="text" id="phone-input" class="input-field w-full rounded-l-[0]!" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="123-456-7890" required />
+                                        <input type="text" id="phone" class="input-field w-full rounded-l-[0]!" inputmode="numeric" placeholder="5010203040" required />
                                     </div>
                                 </div>
                             </div>
@@ -560,7 +518,7 @@
                     <section class="flex flex-col gap-4 w-[527px] max-sm:w-full rounded-2xl p-8 border border-border shadow-md">
                         <header class="text-center">
                             <h1 class="font-semibold text-black text-[32px]">التحقق من رقم الجوال</h1>
-                            <p class="text-secondary-foreground">
+                            <p class="text-secondary-foreground mt-2">
                                 يرجى إدخال رمز التحقق المرسل إلى رقم الجوال 55464***** لاستكمال عملية إنشاء حساب
                             </p>
                         </header>
@@ -605,12 +563,12 @@
                     <section class="flex flex-col gap-4 w-[527px] max-sm:w-full rounded-2xl p-8 border border-border shadow-md">
                         <header class="text-center">
                             <h1 class="font-semibold text-black text-[32px]">تم إنشاء حسابك بنجاح!</h1>
-                            <p class="text-secondary-foreground">
+                            <p class="text-secondary-foreground mt-2">
                                 حسابك أصبح جاهزاً، يمكنك الآن البدء في إرسال رسائلك وإدارة تواصلك.
                             </p>
                         </header>
 
-                        <div>
+                        <div class="mt-2">
                             <button
                                 class="btn bg-main text-white hover:bg-main/80 disabled:bg-main/20 disabled:text-main/60 font-medium"
                             >
@@ -624,6 +582,8 @@
             </form>
         </main>
 
+        <script src="./public/js/lib/flowbit.min.js"></script>
+        <script type="module" src="./public/js/utils/phone-number.js"></script>
         <script type="module" src="./public/js/auth/create-individual-account.js"></script>
     </body>
 </html>
