--- a/reset-password.html
+++ b/reset-password.html
@@ -172,7 +172,7 @@
                 <section class="flex flex-col gap-4 w-[527px] max-sm:w-full rounded-2xl p-8 border border-border shadow-md">
                     <header class="text-center">
                         <h1 class="font-semibold text-black text-[32px]">إعادة تعيين كلمة المرور</h1>
-                        <p class="text-secondary-foreground">من فضلك، أدخل كلمة المرور الجديدة الخاصة بك لاستكمال عملية استعادة كلمة المرور</p>
+                        <p class="text-secondary-foreground mt-2">من فضلك، أدخل كلمة المرور الجديدة الخاصة بك لاستكمال عملية استعادة كلمة المرور</p>
                     </header>
 
                     <form action="/reset-password" method="POST" class="form" id="login-form">
