--- a/group-details.html
+++ b/group-details.html
@@ -279,10 +279,26 @@
                             </svg>
                         </button>
 
-                        <button class="w-10 h-10 rounded-xl flex items-center justify-center bg-secondary hover:bg-secondary/80 text-white">
+                        <div>
+                            <button class="w-10 h-10 rounded-xl flex items-center justify-center bg-black hover:bg-black/80 text-white" data-tooltip-target="tooltip-transfer-to-group">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M20.3235 14.8242C20.4182 14.7295 20.5813 14.7295 20.676 14.8242C20.7708 14.919 20.7708 15.082 20.676 15.1768L15.6741 20.1777C15.6075 20.2382 15.5384 20.2607 15.4895 20.2607C15.4251 20.2606 15.3649 20.2377 15.3137 20.1865C15.219 20.0918 15.219 19.9287 15.3137 19.834L20.3235 14.8242Z" fill="currentColor" stroke="currentColor"/>
+                                    <path d="M20.5 15.7402H3.5C3.09 15.7402 2.75 15.4002 2.75 14.9902C2.75 14.5802 3.09 14.2402 3.5 14.2402H20.5C20.91 14.2402 21.25 14.5802 21.25 14.9902C21.25 15.4002 20.91 15.7402 20.5 15.7402Z" fill="currentColor"/>
+                                    <path d="M3.49994 9.76043C3.30994 9.76043 3.11994 9.69043 2.96994 9.54043C2.67994 9.25043 2.67994 8.77043 2.96994 8.48043L7.97994 3.47043C8.26994 3.18043 8.74994 3.18043 9.03994 3.47043C9.32994 3.76043 9.32994 4.24043 9.03994 4.53043L4.02994 9.54043C3.88994 9.68043 3.68994 9.76043 3.49994 9.76043Z" fill="currentColor"/>
+                                    <path d="M20.5 9.75977H3.5C3.09 9.75977 2.75 9.41977 2.75 9.00977C2.75 8.59977 3.09 8.25977 3.5 8.25977H20.5C20.91 8.25977 21.25 8.59977 21.25 9.00977C21.25 9.41977 20.91 9.75977 20.5 9.75977Z" fill="currentColor"/>
+                                </svg>
+                            </button>
+
+                            <div id="tooltip-transfer-to-group" role="tooltip" class="w-[147px] absolute z-10 invisible inline-block px-3 py-2 text-center text-xs font-medium text-white transition-opacity duration-300 bg-black rounded-lg shadow-xs opacity-0 tooltip dark:bg-gray-700">
+                                تحويل إلى مجموعة أخرى
+                                <div class="tooltip-arrow" data-popper-arrow></div>
+                            </div>
+                        </div>
+
+                        <button class="w-10 h-10 rounded-xl flex items-center justify-center bg-warning hover:bg-warning/80 text-white">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M12.0001 2.74988C11.8101 2.74988 11.6201 2.81988 11.4701 2.96988L5.40012 9.03988C5.11012 9.32988 5.11012 9.80988 5.40012 10.0999C5.69012 10.3899 6.17012 10.3899 6.46012 10.0999L12.0001 4.55988L17.5401 10.0999C17.8301 10.3899 18.3101 10.3899 18.6001 10.0999C18.8901 9.80988 18.8901 9.32988 18.6001 9.03988L12.5301 2.96988C12.3801 2.81988 12.1901 2.74988 12.0001 2.74988Z" fill="currentColor"/>
-                                <path d="M12 2.92C11.59 2.92 11.25 3.26 11.25 3.67V20.5C11.25 20.91 11.59 21.25 12 21.25C12.41 21.25 12.75 20.91 12.75 20.5V3.67C12.75 3.26 12.41 2.92 12 2.92Z" fill="currentColor"/>
+                                <path d="M6.90039 7.75H11.0996C12.9922 7.75 14.2482 8.17201 15.0381 8.96191C15.828 9.75182 16.25 11.0078 16.25 12.9004V17.0996C16.25 18.9922 15.828 20.2482 15.0381 21.0381C14.2482 21.828 12.9922 22.25 11.0996 22.25H6.90039C5.00783 22.25 3.75182 21.828 2.96191 21.0381C2.17201 20.2482 1.75 18.9922 1.75 17.0996V12.9004C1.75 11.0078 2.17201 9.75182 2.96191 8.96191C3.75182 8.17201 5.00783 7.75 6.90039 7.75ZM6.90039 8.25C5.32084 8.25 4.10618 8.51101 3.30859 9.30859C2.51101 10.1062 2.25 11.3208 2.25 12.9004V17.0996C2.25 18.6792 2.51101 19.8938 3.30859 20.6914C4.10618 21.489 5.32084 21.75 6.90039 21.75H11.0996C12.6792 21.75 13.8938 21.489 14.6914 20.6914C15.489 19.8938 15.75 18.6792 15.75 17.0996V12.9004C15.75 11.3208 15.489 10.1062 14.6914 9.30859C13.8938 8.51101 12.6792 8.25 11.0996 8.25H6.90039Z" fill="currentColor" stroke="currentColor"/>
+                                <path d="M17.1 16.75H16C15.59 16.75 15.25 16.41 15.25 16V12.9C15.25 9.8 14.2 8.75 11.1 8.75H8C7.59 8.75 7.25 8.41 7.25 8V6.9C7.25 2.99 8.99 1.25 12.9 1.25H17.1C21.01 1.25 22.75 2.99 22.75 6.9V11.1C22.75 15.01 21.01 16.75 17.1 16.75ZM16.75 15.25H17.1C20.2 15.25 21.25 14.2 21.25 11.1V6.9C21.25 3.8 20.2 2.75 17.1 2.75H12.9C9.8 2.75 8.75 3.8 8.75 6.9V7.25H11.1C15.01 7.25 16.75 8.99 16.75 12.9V15.25Z" fill="currentColor"/>
                             </svg>
                         </button>
                     </div>
@@ -420,7 +436,7 @@
             </section>
 
             <section>
-                <!-- Groups Table --------------------------------------------------------- -->
+                <!-- Groups Details Table --------------------------------------------------------- -->
                 <section class="mt-8 rounded-2xl border border-gray-100 overflow-x-auto">
                     <table class="w-full text-center" id="groups-table">
                         <thead class="text-black bg-[#F9FAFB]">
@@ -470,7 +486,11 @@
                                     طلاب
                                 </td>
                                 <td class="p-6 px-4">
-                                    -
+                                    <label class="inline-flex justify-center items-center cursor-pointer">
+                                        <input type="checkbox" value="" class="sr-only peer" checked disabled>
+                                        <div class="relative w-9 h-5 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-secondary/20 dark:peer-focus:ring-secondary/70 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-secondary/80 dark:peer-checked:bg-secondary"></div>
+                                        <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">نشط</span>
+                                    </label>
                                 </td>
                                 <td class="p-6 px-4">
                                     <section class="flex justify-center items-center gap-8">
@@ -561,7 +581,11 @@
                                     طلاب
                                 </td>
                                 <td class="p-6 px-4">
-                                    -
+                                    <label class="inline-flex justify-center items-center cursor-pointer">
+                                        <input type="checkbox" value="" class="sr-only peer" disabled>
+                                        <div class="relative w-9 h-5 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-secondary/20 dark:peer-focus:ring-secondary/70 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-secondary/80 dark:peer-checked:bg-secondary/80"></div>
+                                        <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">نشط</span>
+                                    </label>
                                 </td>
                                 <td class="p-6 px-4">
                                     <section class="flex justify-center items-center gap-8">
@@ -652,7 +676,11 @@
                                     طلاب
                                 </td>
                                 <td class="p-6 px-4">
-                                    -
+                                    <label class="inline-flex justify-center items-center cursor-pointer">
+                                        <input type="checkbox" value="" class="sr-only peer" checked disabled>
+                                        <div class="relative w-9 h-5 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-secondary/20 dark:peer-focus:ring-secondary/70 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-secondary/80 dark:peer-checked:bg-secondary/80"></div>
+                                        <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">نشط</span>
+                                    </label>
                                 </td>
                                 <td class="p-6 px-4">
                                     <section class="flex justify-center items-center gap-8">
@@ -743,7 +771,11 @@
                                     طلاب
                                 </td>
                                 <td class="p-6 px-4">
-                                    -
+                                    <label class="inline-flex justify-center items-center cursor-pointer">
+                                        <input type="checkbox" value="" class="sr-only peer" checked disabled>
+                                        <div class="relative w-9 h-5 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-secondary/20 dark:peer-focus:ring-secondary/70 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-secondary/80 dark:peer-checked:bg-secondary/80"></div>
+                                        <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">نشط</span>
+                                    </label>
                                 </td>
                                 <td class="p-6 px-4">
                                     <section class="flex justify-center items-center gap-8">
@@ -834,7 +866,11 @@
                                     طلاب
                                 </td>
                                 <td class="p-6 px-4">
-                                    -
+                                    <label class="inline-flex justify-center items-center cursor-pointer">
+                                        <input type="checkbox" value="" class="sr-only peer" disabled>
+                                        <div class="relative w-9 h-5 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-secondary/20 dark:peer-focus:ring-secondary/70 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-secondary/80 dark:peer-checked:bg-secondary/80"></div>
+                                        <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">نشط</span>
+                                    </label>
                                 </td>
                                 <td class="p-6 px-4">
                                     <section class="flex justify-center items-center gap-8">
@@ -925,7 +961,11 @@
                                     طلاب
                                 </td>
                                 <td class="p-6 px-4">
-                                    -
+                                    <label class="inline-flex justify-center items-center cursor-pointer">
+                                        <input type="checkbox" value="" class="sr-only peer" checked disabled>
+                                        <div class="relative w-9 h-5 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-secondary/20 dark:peer-focus:ring-secondary/70 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-secondary/80 dark:peer-checked:bg-secondary/80"></div>
+                                        <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">نشط</span>
+                                    </label>
                                 </td>
                                 <td class="p-6 px-4">
                                     <section class="flex justify-center items-center gap-8">
@@ -1016,7 +1056,11 @@
                                     طلاب
                                 </td>
                                 <td class="p-6 px-4">
-                                    -
+                                    <label class="inline-flex justify-center items-center cursor-pointer">
+                                        <input type="checkbox" value="" class="sr-only peer" checked disabled>
+                                        <div class="relative w-9 h-5 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-secondary/20 dark:peer-focus:ring-secondary/70 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-secondary/80 dark:peer-checked:bg-secondary/80"></div>
+                                        <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">نشط</span>
+                                    </label>
                                 </td>
                                 <td class="p-6 px-4">
                                     <section class="flex justify-center items-center gap-8">
@@ -1107,7 +1151,11 @@
                                     طلاب
                                 </td>
                                 <td class="p-6 px-4">
-                                    -
+                                    <label class="inline-flex justify-center items-center cursor-pointer">
+                                        <input type="checkbox" value="" class="sr-only peer" checked disabled>
+                                        <div class="relative w-9 h-5 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-secondary/20 dark:peer-focus:ring-secondary/70 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-secondary/80 dark:peer-checked:bg-secondary/80"></div>
+                                        <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">نشط</span>
+                                    </label>
                                 </td>
                                 <td class="p-6 px-4">
                                     <section class="flex justify-center items-center gap-8">
